@@ -29,6 +29,7 @@ Version 1.6 (2.0 Alpha 6)
 -fixed blank canvas issue on Mac
 -elevator modes can now be set from building scripts and the INI file
 -fixed ACP mode
+-fixed other service modes
 
 Version 1.5 (2.0 Alpha 5)
 -------------------------
